Updates for Kotlin 1.8 (#56)