@@ -1,5 +1,8 @@
+import org.jetbrains.kotlin.gradle.dsl.JvmTarget
+import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
 @Suppress("DSL_SCOPE_VIOLATION")
+
 plugins {
   alias(libs.plugins.kotlin.jvm) apply false
   alias(libs.plugins.dokka) apply false
@@ -49,18 +52,29 @@ allprojects {
     )
     systemProperty("CURRENT_VERSION", "$version")
     systemProperty("arrowVersion", libs.versions.arrow.get())
-    systemProperty("jvmTargetVersion", properties["jvmTargetVersion"].toString())
-    jvmArgs = listOf("""-Dkotlin.compiler.execution.strategy="in-process"""")
+    jvmArgs = listOf(
+      """-Dkotlin.compiler.execution.strategy="in-process"""",
+      "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+      "--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+      "--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+      "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+      "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+      "--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+      "--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED"
+    )
   }
 }
 
 val toolchain = project.extensions.getByType<JavaToolchainService>()
 allprojects {
   tasks.withType<JavaCompile>().configureEach {
-    javaCompiler.set(toolchain.compilerFor {
-      val jvmTargetVersion = properties["jvmTargetVersion"].toString()
-      val javaVersion = if (jvmTargetVersion == "1.8") "8" else jvmTargetVersion
-      languageVersion.set(JavaLanguageVersion.of(javaVersion))
-    })
+    javaCompiler.set(
+      toolchain.compilerFor {
+        languageVersion.set(JavaLanguageVersion.of(8))
+      }
+    )
+  }
+  tasks.withType<KotlinCompile>().configureEach {
+    compilerOptions.jvmTarget.set(JvmTarget.JVM_1_8)
   }
 }
